# rustatevec

./: .gitignore  Cargo.toml  README.md  todo.md
.github/workflows/: ci.yml  pages.yml
bench/: custatevec_compare.py
bench/results/: SUMMARY-xeon.md  gpu-l40s.md  threading-numa.txt  throughput-f64x8.txt  throughput-native.txt
crates/qsv-bench/: Cargo.toml
crates/qsv-bench/benches/: index_gen.rs  throughput.rs
crates/qsv-cli/: Cargo.toml
crates/qsv-cli/src/: main.rs
crates/qsv-core/: Cargo.toml
crates/qsv-core/src/: circuit.rs  circuits.rs  complex.rs  fusion.rs  gate.rs  lib.rs  real.rs  sample.rs
crates/qsv-core/src/backend/: bitshift.rs  cpu.rs  mod.rs  reference.rs  reshape.rs  simd.rs
crates/qsv-core/src/state/: layout.rs  mod.rs
crates/qsv-core/tests/: equivalence.rs  oracle.rs  sampling.rs
crates/qsv-cuda/: Cargo.toml
crates/qsv-cuda/examples/: qft_time.rs  throughput.rs
crates/qsv-cuda/src/: kernels.cu  lib.rs
crates/qsv-cuda/tests/: equivalence.rs
docs/: DESIGN.md  book.toml
docs/reference/: state_vector.jl
docs/research/: 01-cpu-simulators.md  02-gpu-and-rust-landscape.md  README.md
docs/src/: SUMMARY.md  install.md  introduction.md  tutorial.md
docs/src/design/: benchmarking.md  kernel.md  optimization.md  overview.md  roadmap.md
docs/src/research/: cpu-simulators.md  cutile-investigation.md  gpu-and-rust.md  overview.md
