[package]
name = "qsv-core"
version = "0.0.0"
description = "High-performance quantum statevector simulator — core library"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = ["f64", "parallel", "simd"]
# Scalar precision selection is informational at v0.0 (everything is generic over `Real`);
# these gate which Real impls downstream crates default to.
f64 = []
f32 = []
# Multithreaded kernels (rayon). On by default; disable for a dependency-free core build.
parallel = ["dep:rayon"]
# Portable-SIMD kernels via the stable `wide` crate (SimdBackend). On by default.
simd = ["dep:wide"]
# Swaps the SIMD complex-multiply impl to `std::simd::f64x8` (512-bit, AVX-512). Requires a
# nightly toolchain (`portable_simd`). Implies `simd`. Off by default.
nightly-simd = ["simd"]
# x86-64 BMI2 (PEXT/PDEP) fast path for bit-index generation (insert_zero_bits). Runtime-detected;
# falls back to scalar on non-BMI2 CPUs. Off by default.
bmi2 = []

[dependencies]
rayon = { version = "1", optional = true }
wide = { version = "0.7", optional = true }

[dev-dependencies]
